# document-calculus

./: CHANGELOG.md  Makefile  README.md  cabal.project  document-calculus.cabal
src/Document/Article/: Types.hs
src/Document/String/: Expression.hs  Types.hs
test/: Main.hs  TestUtils.hs
test/Document/: ArticleTest.hs  StringTest.hs
