cabal-version: 3.12
name: document-calculus
version: 0.1.0.0
-- synopsis:
-- description:
license: BSD-3-Clause
license-file: LICENSE
-- author:
-- maintainer:
-- copyright:
category: Documentation
build-type: Simple
extra-doc-files: CHANGELOG.md

common rts-options
  ghc-options:
    -rtsopts
    -threaded
    "-with-rtsopts=-N -T"

common extensions
  default-extensions:
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    NoStarIsType
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PolyKinds
    RecordWildCards
    RequiredTypeArguments
    StrictData
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  default-language: GHC2024

common ghc-options
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -Wno-unused-do-bind
    -funbox-strict-fields
    -Wunused-packages
    -funbox-small-strict-fields

library
  import: extensions
  import: ghc-options
  -- cabal-gild: discover src
  exposed-modules:
    Document.String.Types

  build-depends:
    base ^>=4.20,
    bound,
    bytestring,
    containers,
    effectful-core,
    text,
    text-display,
    vector,

  hs-source-dirs: src

test-suite document-test
  import: extensions
  import: ghc-options
  import: rts-options
  type: exitcode-stdio-1.0
  main-is: Main.hs
  -- cabal-gild: discover test --exclude=test/Main.hs
  other-modules:
    Document.StringTest
    TestUtils

  hs-source-dirs: test
  build-depends:
    base,
    document-calculus,
    effectful-core,
    tasty,
    tasty-hunit,
